--- a/slider.html
+++ b/slider.html
@@ -13,9 +13,9 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <!-- Aquí van los slides, uno por imagen -->
-      <div class="swiper-slide"><img src="LINK_1" /></div>
-      <div class="swiper-slide"><img src="LINK_2" /></div>
-      <div class="swiper-slide"><img src="LINK_3" /></div>
+      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=1ebzIyz1zOi7U5vkjU85fsqWTZ0gokSgb" /></div>
+      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=1HLNOYCHtkRoUmIZBgrJpMGKesZo7q7k_" /></div>
+      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" /></div>
       <!-- ... -->
     </div>
     <div class="swiper-pagination"></div>
@@ -33,4 +33,5 @@
     });
   </script>
 </body>
+
 </html>
