--- a/slider.html
+++ b/slider.html
@@ -7,17 +7,15 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: sans-serif;
       background: #f4f4f4;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
+      font-family: sans-serif;
     }
     .swiper {
-      width: 90vw;
+      width: 100%;
       max-width: 600px;
       height: auto;
+      margin: auto;
+      padding: 20px 0;
     }
     .swiper-slide {
       display: flex;
@@ -42,9 +40,15 @@
 <body>
   <div class="swiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 1" /></div>
-      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" alt="Imagen 2" /></div>
-      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=1HLNOYCHtkRoUmIZBgrJpMGKesZo7q7k_" alt="Imagen 3" /></div>
+      <div class="swiper-slide">
+        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 1">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" alt="Imagen 2">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://drive.google.com/uc?export=view&id=1HLNOYCHtkRoUmIZBgrJpMGKesZo7q7k_" alt="Imagen 3">
+      </div>
     </div>
     <div class="swiper-pagination"></div>
     <div class="swiper-button-prev"></div>
