--- a/slider.html
+++ b/slider.html
@@ -41,7 +41,8 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 1">
+        <img src="https://drive.google.com/uc?export=download&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl
+"Imagen 1">
       </div>
       <div class="swiper-slide">
         <img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" alt="Imagen 2">
@@ -67,3 +68,4 @@
   </script>
 </body>
 </html>
+
