--- a/slider.html
+++ b/slider.html
@@ -9,13 +9,14 @@
       padding: 0;
       background: #f4f4f4;
       font-family: sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
     .swiper {
-      width: 100%;
+      width: 90vw;
       max-width: 600px;
-      height: auto;
-      margin: auto;
-      padding: 20px 0;
     }
     .swiper-slide {
       display: flex;
@@ -41,14 +42,13 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=download&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl
-"Imagen 1">
+        <img src="https://picsum.photos/id/1015/600/400" alt="Imagen 1">
       </div>
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" alt="Imagen 2">
+        <img src="https://picsum.photos/id/1025/600/400" alt="Imagen 2">
       </div>
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1HLNOYCHtkRoUmIZBgrJpMGKesZo7q7k_" alt="Imagen 3">
+        <img src="https://picsum.photos/id/1035/600/400" alt="Imagen 3">
       </div>
     </div>
     <div class="swiper-pagination"></div>
@@ -68,4 +68,3 @@
   </script>
 </body>
 </html>
-
