--- a/slider.html
+++ b/slider.html
@@ -42,7 +42,7 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://picsum.photos/id/1015/600/400" alt="Imagen 1">
+        <img src="https://picsum.photos/id/1015/600/400" alt="Imagen DEIMERH">
       </div>
       <div class="swiper-slide">
         <img src="https://picsum.photos/id/1025/600/400" alt="Imagen 2">
@@ -68,3 +68,4 @@
   </script>
 </body>
 </html>
+
