--- a/slider.html
+++ b/slider.html
@@ -16,7 +16,8 @@
     }
     .swiper {
       width: 90vw;
-      max-width: 600px;
+      max-width: 800px;
+      height: auto;
     }
     .swiper-slide {
       display: flex;
@@ -24,10 +25,11 @@
       align-items: center;
     }
     .swiper-slide img {
-      width: 100%;
+      max-width: 100%;
       height: auto;
       border-radius: 15px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+      display: block;
     }
     .swiper-pagination-bullet {
       background: #fff;
@@ -42,13 +44,13 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://picsum.photos/id/1015/600/400" alt="Imagen DEIMERH">
+        <img src="https://picsum.photos/id/1015/800/500" alt="Imagen 1">
       </div>
       <div class="swiper-slide">
-        <img src="https://picsum.photos/id/1025/600/400" alt="Imagen 2">
+        <img src="https://picsum.photos/id/1025/800/500" alt="Imagen 2">
       </div>
       <div class="swiper-slide">
-        <img src="https://picsum.photos/id/1035/600/400" alt="Imagen 3">
+        <img src="https://picsum.photos/id/1035/800/500" alt="Imagen 3">
       </div>
     </div>
     <div class="swiper-pagination"></div>
@@ -68,4 +70,3 @@
   </script>
 </body>
 </html>
-
