--- a/slider.html
+++ b/slider.html
@@ -2,6 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <style>
     body {
@@ -44,13 +47,13 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://picsum.photos/id/1015/800/500" alt="Imagen 1">
+        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 1">
       </div>
       <div class="swiper-slide">
-        <img src="https://picsum.photos/id/1025/800/500" alt="Imagen 2">
+        <img src="https://drive.google.com/uc?export=view&id=15ltj0o3JdMaKSh1ARxwNNodNzP_gzIuT" alt="Imagen 2">
       </div>
       <div class="swiper-slide">
-        <img src="https://picsum.photos/id/1035/800/500" alt="Imagen 3">
+        <img src="https://drive.google.com/uc?export=view&id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_" alt="Imagen 3">
       </div>
     </div>
     <div class="swiper-pagination"></div>
