--- a/slider.html
+++ b/slider.html
@@ -47,13 +47,13 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 1">
+        <img src="https://drive.google.com/uc?export=download&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 1">
       </div>
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=15ltj0o3JdMaKSh1ARxwNNodNzP_gzIuT" alt="Imagen 2">
+        <img src="https://drive.google.com/uc?export=download&id=15ltj0o3JdMaKSh1ARxwNNodNzP_gzIuT" alt="Imagen 2">
       </div>
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_" alt="Imagen 3">
+        <img src="https://drive.google.com/uc?export=download&id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_" alt="Imagen 3">
       </div>
     </div>
     <div class="swiper-pagination"></div>
