--- a/slider.html
+++ b/slider.html
@@ -1,48 +1,30 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Carrusel</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: #f4f4f4;
-      font-family: sans-serif;
+    body { margin: 0; padding: 0; background-color: #f4f4f4; font-family: Arial, sans-serif; }
+    .swiper { width: 100vw; height: auto; padding-bottom: 50px; }
+    .swiper-slide {
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 100vh;
-    }
-    .swiper {
-      width: 90vw;
-      max-width: 800px;
-      height: 60vh;
     }
     .swiper-slide img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
+      max-width: 100%;
+      max-height: 70vh;
       border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-    }
-    .swiper-pagination-bullet {
-      background: #fff;
-      opacity: 0.8;
-    }
-    .swiper-pagination-bullet-active {
-      background: #007aff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     }
   </style>
 </head>
 <body>
   <div class="swiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 1"></div>
-      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=15ltj0o3JdMaKSh1ARxwNNodNzP_gzIuT" alt="Imagen 2"></div>
-      <div class="swiper-slide"><img src="https://drive.google.com/uc?export=view&id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_" alt="Imagen 3"></div>
+      <div class="swiper-slide"><img src="https://drive.usercontent.google.com/download?id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_&export=view&authuser=0" alt="Imagen 1"></div>
+      <div class="swiper-slide"><img src="https://drive.usercontent.google.com/download?id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl&export=view&authuser=0" alt="Imagen 2"></div>
+      <div class="swiper-slide"><img src="https://drive.usercontent.google.com/download?id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I&export=view&authuser=0" alt="Imagen 3"></div>
     </div>
     <div class="swiper-pagination"></div>
     <div class="swiper-button-prev"></div>
@@ -56,7 +38,7 @@
       pagination: { el: '.swiper-pagination', clickable: true },
       navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
       slidesPerView: 1,
-      spaceBetween: 20,
+      spaceBetween: 10,
     });
   </script>
 </body>
