--- a/slider.html
+++ b/slider.html
@@ -4,27 +4,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <style>
-    body { margin: 0; padding: 0; background-color: #f4f4f4; font-family: Arial, sans-serif; }
-    .swiper { width: 100vw; height: auto; padding-bottom: 50px; }
+    body { margin: 0; padding: 0; background-color: #000; }
+    .swiper { width: 100vw; height: 100vh; }
     .swiper-slide {
       display: flex;
       justify-content: center;
       align-items: center;
+      background-color: #000;
     }
     .swiper-slide img {
       max-width: 100%;
-      max-height: 70vh;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+      max-height: 100%;
+      border-radius: 8px;
     }
   </style>
 </head>
 <body>
   <div class="swiper">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="https://drive.usercontent.google.com/download?id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_&export=view&authuser=0" alt="Imagen 1"></div>
-      <div class="swiper-slide"><img src="https://drive.usercontent.google.com/download?id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl&export=view&authuser=0" alt="Imagen 2"></div>
-      <div class="swiper-slide"><img src="https://drive.usercontent.google.com/download?id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I&export=view&authuser=0" alt="Imagen 3"></div>
+      <div class="swiper-slide">
+        <img src="https://drive.usercontent.google.com/download?id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_&export=view&authuser=0">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://drive.usercontent.google.com/download?id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl&export=view&authuser=0">
+      </div>
+      <div class="swiper-slide">
+        <img src="https://drive.usercontent.google.com/download?id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I&export=view&authuser=0">
+      </div>
     </div>
     <div class="swiper-pagination"></div>
     <div class="swiper-button-prev"></div>
@@ -38,7 +44,6 @@
       pagination: { el: '.swiper-pagination', clickable: true },
       navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
       slidesPerView: 1,
-      spaceBetween: 10,
     });
   </script>
 </body>
