--- a/slider.html
+++ b/slider.html
@@ -4,18 +4,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <style>
-    body { margin: 0; padding: 0; background-color: #000; }
-    .swiper { width: 100vw; height: 100vh; }
-    .swiper-slide {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #000;
-    }
-    .swiper-slide img {
-      max-width: 100%;
-      max-height: 100%;
-      border-radius: 8px;
+    body { margin: 0; padding: 0; background: #000; }
+    .swiper { width: 100vw; height: 70vw; }
+    .swiper-slide img { 
+      width: 100%; 
+      height: auto; 
+      object-fit: contain;
+      border-radius: 12px;
     }
   </style>
 </head>
@@ -23,13 +18,7 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://drive.usercontent.google.com/download?id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_&export=view&authuser=0">
-      </div>
-      <div class="swiper-slide">
-        <img src="https://drive.usercontent.google.com/download?id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl&export=view&authuser=0">
-      </div>
-      <div class="swiper-slide">
-        <img src="https://drive.usercontent.google.com/download?id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I&export=view&authuser=0">
+        <img src="https://drive.usercontent.google.com/download?id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I&export=view&authuser=0" alt="Imagen 1" />
       </div>
     </div>
     <div class="swiper-pagination"></div>
@@ -41,9 +30,10 @@
   <script>
     new Swiper('.swiper', {
       loop: true,
-      pagination: { el: '.swiper-pagination', clickable: true },
+      pagination: { el: '.swiper-pagination' },
       navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
       slidesPerView: 1,
+      spaceBetween: 10,
     });
   </script>
 </body>
