--- a/slider.html
+++ b/slider.html
@@ -6,9 +6,9 @@
   <style>
     body { margin: 0; padding: 0; background: #000; }
     .swiper { width: 100vw; height: 70vw; }
-    .swiper-slide img {
-      width: 100%;
-      height: auto;
+    .swiper-slide img { 
+      width: 100%; 
+      height: auto; 
       object-fit: contain;
       border-radius: 12px;
     }
@@ -17,15 +17,28 @@
 <body>
   <div class="swiper">
     <div class="swiper-wrapper">
+
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1q-3fgMWSc0nRl36fGUaY1rrf9TrOdOPY" alt="Imagen 1">
+        <img src="https://drive.google.com/uc?export=view&id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_" 
+             alt="Imagen 1" 
+             referrerpolicy="no-referrer" 
+             crossorigin="anonymous">
       </div>
+
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 2">
+        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" 
+             alt="Imagen 2" 
+             referrerpolicy="no-referrer" 
+             crossorigin="anonymous">
       </div>
+
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" alt="Imagen 3">
+        <img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" 
+             alt="Imagen 3" 
+             referrerpolicy="no-referrer" 
+             crossorigin="anonymous">
       </div>
+
     </div>
     <div class="swiper-pagination"></div>
     <div class="swiper-button-prev"></div>
