--- a/slider.html
+++ b/slider.html
@@ -4,47 +4,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
   <style>
-    body { margin: 0; padding: 0; background: #000; }
+    body { margin: 0; padding: 0; background: #111; }
     .swiper { width: 100vw; height: 70vw; }
-    .swiper-slide img { 
-      width: 100%; 
-      height: auto; 
-      object-fit: contain;
-      border-radius: 12px;
-    }
+    .swiper-slide img { width: 100%; height: auto; border-radius: 12px; }
   </style>
 </head>
 <body>
   <div class="swiper">
     <div class="swiper-wrapper">
-
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_" 
-             alt="Imagen 1" 
-             referrerpolicy="no-referrer" 
-             crossorigin="anonymous">
+        <img src="https://drive.google.com/uc?export=view&id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_" alt="Imagen 1">
       </div>
-
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" 
-             alt="Imagen 2" 
-             referrerpolicy="no-referrer" 
-             crossorigin="anonymous">
+        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 2">
       </div>
-
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" 
-             alt="Imagen 3" 
-             referrerpolicy="no-referrer" 
-             crossorigin="anonymous">
+        <img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" alt="Imagen 3">
       </div>
-
     </div>
     <div class="swiper-pagination"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     new Swiper('.swiper', {
