--- a/slider.html
+++ b/slider.html
@@ -13,7 +13,7 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1V7Je4OLOCPKgjd6xdVJmxd_nKkx-QmR_" alt="Imagen 1">
+        <img src="https://drive.google.com/file/d/1ebzIyz1zOi7U5vkjU85fsqWTZ0gokSgb/view?usp=sharing" alt="Imagen 1">
       </div>
       <div class="swiper-slide">
         <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 2">
@@ -38,3 +38,4 @@
   </script>
 </body>
 </html>
+
