--- a/slider.html
+++ b/slider.html
@@ -16,10 +16,10 @@
         <img src="https://drive.google.com/file/d/1ebzIyz1zOi7U5vkjU85fsqWTZ0gokSgb/view?usp=sharing" alt="Imagen 1">
       </div>
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1wuPu7t27eaONqsXGwZcHDk-t_w69B4Xl" alt="Imagen 2">
+        <img src="https://drive.google.com/file/d/1cIP5alR4w3zmvMdielMAXZj_eYWtp4_R/view?usp=sharing" alt="Imagen 2">
       </div>
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1uMOhpdsJF-TxNKDhoCfk7IQmX9Irz37I" alt="Imagen 3">
+        <img src="https://drive.google.com/file/d/1q-3fgMWSc0nRl36fGUaY1rrf9TrOdOPY/view?usp=sharing" alt="Imagen 3">
       </div>
     </div>
     <div class="swiper-pagination"></div>
@@ -38,4 +38,5 @@
   </script>
 </body>
 </html>
+
 
