--- a/slider.html
+++ b/slider.html
@@ -13,13 +13,13 @@
   <div class="swiper">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1ebzIyz1zOi7U5vkjU85fsqWTZ0gokSgb" alt="Imagen 1">
+        <img src="https://drive.google.com/thumbnail?id=1ebzIyz1zOi7U5vkjU85fsqWTZ0gokSgb&sz=w1000" alt="Imagen 1">
       </div>
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1cIP5alR4w3zmvMdielMAXZj_eYWtp4_R" alt="Imagen 2">
+        <img src="https://drive.google.com/thumbnail?id=1cIP5alR4w3zmvMdielMAXZj_eYWtp4_R&sz=w1000" alt="Imagen 2">
       </div>
       <div class="swiper-slide">
-        <img src="https://drive.google.com/uc?export=view&id=1q-3fgMWSc0nRl36fGUaY1rrf9TrOdOPY" alt="Imagen 3">
+        <img src="https://drive.google.com/thumbnail?id=1q-3fgMWSc0nRl36fGUaY1rrf9TrOdOPY&sz=w1000" alt="Imagen 3">
       </div>
     </div>
     <div class="swiper-pagination"></div>
