--- a/slider.html
+++ b/slider.html
@@ -21,7 +21,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     // ⚠️ REEMPLAZA ESTA URL con la URL de tu nueva implementación de Apps Script
-    const SCRIPT_URL = "URL_DE_TU_SCRIPT_AQUI"; 
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwyY6m3H8WD494cnoQbNXwspsZtD1sGu97yio9mk9DTozGSuyo6gHXB1W6HArcpYfP2/exec"; 
 
     // Función para obtener y cargar las imágenes
     async function cargarImagenes() {
@@ -64,3 +64,4 @@
   </script>
 </body>
 </html>
+
