--- a/slider.html
+++ b/slider.html
@@ -7,104 +7,114 @@
     body {
       margin: 0;
       padding: 0;
-      background: #1a1a1a;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #e0e0e0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-      overflow: hidden; /* Evita el scroll del body */
+      background: linear-gradient(135deg, #111, #222);
+      font-family: Arial, sans-serif;
     }
 
     .swiper {
-      width: 85vw;
-      max-width: 600px;
-      border-radius: 16px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
-      overflow: hidden;
-    }
-    
-    /* Contenedor de cada slide */
-    .swiper-slide {
-      background: #222;
-      display: flex;
-      flex-direction: column; /* Organiza los elementos en columna */
-      height: auto;
+      width: 100vw;
+      height: 100vh; /* ocupa toda la altura del móvil */
     }
 
-    /* Contenedor de la imagen (ajuste para 16:9) */
-    .image-container {
-      position: relative;
-      width: 100%;
-      padding-top: 56.25%; /* Ratio 16:9 (9 / 16 = 0.5625) */
-      overflow: hidden;
+    .swiper-slide {
+      display: flex;
+      flex-direction: column; /* Organiza los elementos en columna */
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      box-sizing: border-box;
     }
 
     .swiper-slide img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover; /* Cubre el contenedor sin deformar la imagen */
+      width: 90%;
+      height: auto;
+      max-height: 50vh; /* Se ajusta para dejar espacio al texto */
+      object-fit: contain;
+      border-radius: 16px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
+      transition: transform 0.3s ease;
+      margin-bottom: 20px; /* Espacio entre imagen y texto */
     }
 
-    /* Contenedor del texto (tarjeta) */
-    .text-card {
-      padding: 20px;
-      background-color: #2b2b2b;
-      color: #e0e0e0;
-      border-top: 1px solid #333;
+    .swiper-slide img:hover {
+      transform: scale(1.03);
+    }
+
+    /* Contenedor de la información */
+    .info-container {
+      width: 90%;
+      background: rgba(255, 255, 255, 0.1);
+      padding: 15px;
+      border-radius: 16px;
+      color: white;
       text-align: left;
-      border-bottom-left-radius: 16px;
-      border-bottom-right-radius: 16px;
-    }
-    
-    .text-card h2 {
-      margin-top: 0;
-      margin-bottom: 10px;
-      font-size: 1.5em;
-      color: #fff;
-    }
-    
-    .text-card .description {
-      margin-bottom: 15px;
-      font-style: italic;
-      color: #b0b0b0;
-    }
-    
-    .text-card .comments-section {
-      margin-top: 20px;
-      padding-top: 15px;
-      border-top: 1px solid #444;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
     }
 
-    .text-card .comment {
-      background-color: #383838;
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 8px;
-      line-height: 1.4;
+    .info-container h2 {
+      margin: 0 0 5px 0;
+      font-size: 1.4em;
     }
     
-    /* Botones y paginación */
-    .swiper-pagination-bullet { background: #555; opacity: 0.8; }
-    .swiper-pagination-bullet-active { background: #eee; opacity: 1; }
-    .swiper-button-prev, .swiper-button-next { color: #eee; opacity: 0.7; transition: opacity 0.3s ease; }
-    .swiper-button-prev:hover, .swiper-button-next:hover { opacity: 1; }
-    .swiper-button-prev::after, .swiper-button-next::after { font-size: 1.5em; font-weight: bold; }
+    .info-container .description {
+      margin: 0 0 10px 0;
+      font-size: 1em;
+      color: #ccc;
+    }
+
+    .info-container .comments-section {
+      margin-top: 15px;
+      border-top: 1px solid rgba(255,255,255,0.2);
+      padding-top: 10px;
+    }
+    
+    .info-container .comment {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 8px;
+      border-radius: 8px;
+      margin-bottom: 5px;
+      font-size: 0.9em;
+      line-height: 1.3;
+    }
+
+    /* Botones de navegación */
+    .swiper-button-next, .swiper-button-prev {
+      background: rgba(0,0,0,0.4);
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: white;
+      transition: background 0.3s;
+    }
+
+    .swiper-button-next:hover, .swiper-button-prev:hover {
+      background: rgba(0,0,0,0.6);
+    }
+
+    /* Paginación personalizada */
+    .swiper-pagination-bullet {
+      background: rgba(255,255,255,0.6);
+      opacity: 1;
+      transition: all 0.3s;
+    }
+
+    .swiper-pagination-bullet-active {
+      background: #ff9800;
+      transform: scale(1.2);
+    }
   </style>
 </head>
 <body>
   <div class="swiper">
-    <div class="swiper-wrapper">
-          </div>
+    <div class="swiper-wrapper"></div>
     <div class="swiper-pagination"></div>
     <div class="swiper-button-prev"></div>
     <div class="swiper-button-next"></div>
   </div>
- 
+  
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script>
     const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwyY6m3H8WD494cnoQbNXwspsZtD1sGu97yio9mk9DTozGSuyo6gHXB1W6HArcpYfP2/exec"; 
@@ -112,81 +122,70 @@
     async function cargarAnuncios() {
       try {
         const response = await fetch(`${SCRIPT_URL}?accion=listarAnuncios`);
-        if (!response.ok) {
-          throw new Error(`HTTP error! status: ${response.status}`);
-        }
+        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+        
         const data = await response.json();
         const swiperWrapper = document.querySelector('.swiper-wrapper');
         
         data.anuncios.forEach((anuncio, index) => {
           const swiperSlide = document.createElement('div');
           swiperSlide.classList.add('swiper-slide');
-
-          // Contenedor de la imagen
-          const imageContainer = document.createElement('div');
-          imageContainer.classList.add('image-container');
+          
+          // Imagen
           const img = document.createElement('img');
           img.src = anuncio.url;
           img.alt = anuncio.titulo || `Imagen ${index + 1}`;
-          imageContainer.appendChild(img);
-
-          // Contenedor del texto tipo tarjeta
-          const textCard = document.createElement('div');
-          textCard.classList.add('text-card');
-
-          // Título
+          swiperSlide.appendChild(img);
+          
+          // Contenedor de información
+          const infoContainer = document.createElement('div');
+          infoContainer.classList.add('info-container');
+          
+          // Título y descripción
           const titulo = document.createElement('h2');
           titulo.textContent = anuncio.titulo || '';
-
-          // Descripción
+          
           const descripcion = document.createElement('p');
           descripcion.classList.add('description');
           descripcion.textContent = anuncio.descripcion || '';
-
-          // Comentarios
-          const commentsSection = document.createElement('div');
-          commentsSection.classList.add('comments-section');
-          const commentsHeading = document.createElement('p');
-          commentsHeading.textContent = 'Comentarios:';
-          commentsHeading.style.fontWeight = 'bold';
-          commentsSection.appendChild(commentsHeading);
-
-          // Separar comentarios por doble salto de línea
-          if (anuncio.comentarios) {
+          
+          infoContainer.appendChild(titulo);
+          infoContainer.appendChild(descripcion);
+          
+          // Comentarios separados
+          if (anuncio.comentarios && anuncio.comentarios.trim() !== '') {
+            const commentsSection = document.createElement('div');
+            commentsSection.classList.add('comments-section');
+            
             const comentariosArray = anuncio.comentarios.split('\n\n');
             comentariosArray.forEach(comentario => {
               if (comentario.trim() !== '') {
                 const p = document.createElement('p');
                 p.classList.add('comment');
-                p.textContent = comentario;
+                p.textContent = comentario.trim();
                 commentsSection.appendChild(p);
               }
             });
+            infoContainer.appendChild(commentsSection);
           }
-
-          // Ensamblar la tarjeta de texto
-          textCard.appendChild(titulo);
-          textCard.appendChild(descripcion);
-          textCard.appendChild(commentsSection);
           
-          // Ensamblar el slide completo
-          swiperSlide.appendChild(imageContainer);
-          swiperSlide.appendChild(textCard);
+          swiperSlide.appendChild(infoContainer);
           swiperWrapper.appendChild(swiperSlide);
         });
         
-        // Inicializar Swiper después de que las imágenes se hayan cargado
         new Swiper('.swiper', {
           loop: true,
-          pagination: { el: '.swiper-pagination' },
+          pagination: { el: '.swiper-pagination', clickable: true },
           navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
           slidesPerView: 1,
-          spaceBetween: 10,
+          spaceBetween: 20,
         });
+
       } catch (error) {
-        console.error("Error al cargar los anuncios:", error);
+        console.error("Error al cargar las imágenes:", error);
       }
     }
+
     cargarAnuncios();
   </script>
 </body>
