--- a/slider.html
+++ b/slider.html
@@ -1,192 +1,184 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      background: linear-gradient(135deg, #111, #222);
-      font-family: Arial, sans-serif;
-    }
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: #111;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #e0e0e0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
 
-    .swiper {
-      width: 100vw;
-      height: 100vh; /* ocupa toda la altura del móvil */
-    }
+    .swiper {
+      width: 100vw;
+      max-width: 480px;
+      border-radius: 16px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.6);
+      overflow: hidden;
+    }
+    
+    /* Contenedor de cada slide */
+    .swiper-slide {
+      background: #1b1b1b;
+      display: flex;
+      flex-direction: column;
+    }
 
-    .swiper-slide {
-      display: flex;
-      flex-direction: column; /* Organiza los elementos en columna */
-      align-items: center;
-      justify-content: center;
-      padding: 20px;
-      box-sizing: border-box;
-    }
+    /* Imagen con ratio 16:9 */
+    .image-container {
+      position: relative;
+      width: 100%;
+      padding-top: 56.25%; /* 16:9 */
+      overflow: hidden;
+    }
 
-    .swiper-slide img {
-      width: 90%;
-      height: auto;
-      max-height: 50vh; /* Se ajusta para dejar espacio al texto */
-      object-fit: contain;
-      border-radius: 16px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.5);
-      transition: transform 0.3s ease;
-      margin-bottom: 20px; /* Espacio entre imagen y texto */
-    }
+    .image-container img {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
 
-    .swiper-slide img:hover {
-      transform: scale(1.03);
-    }
+    /* Tarjeta de texto */
+    .text-card {
+      padding: 15px;
+      background-color: #222;
+      border-top: 1px solid #333;
+      border-bottom-left-radius: 16px;
+      border-bottom-right-radius: 16px;
+    }
 
-    /* Contenedor de la información */
-    .info-container {
-      width: 90%;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 15px;
-      border-radius: 16px;
-      color: white;
-      text-align: left;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
+    .text-card h2 {
+      margin: 0 0 8px;
+      font-size: 1.3em;
+      color: #fff;
+    }
 
-    .info-container h2 {
-      margin: 0 0 5px 0;
-      font-size: 1.4em;
-    }
-    
-    .info-container .description {
-      margin: 0 0 10px 0;
-      font-size: 1em;
-      color: #ccc;
-    }
+    .description {
+      margin-bottom: 10px;
+      font-style: italic;
+      color: #b0b0b0;
+    }
 
-    .info-container .comments-section {
-      margin-top: 15px;
-      border-top: 1px solid rgba(255,255,255,0.2);
-      padding-top: 10px;
-    }
-    
-    .info-container .comment {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 8px;
-      border-radius: 8px;
-      margin-bottom: 5px;
-      font-size: 0.9em;
-      line-height: 1.3;
-    }
+    .comments-section {
+      margin-top: 12px;
+      padding-top: 10px;
+      border-top: 1px solid #444;
+    }
 
-    /* Botones de navegación */
-    .swiper-button-next, .swiper-button-prev {
-      background: rgba(0,0,0,0.4);
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      transition: background 0.3s;
-    }
+    .comments-section p {
+      margin: 0 0 6px;
+    }
 
-    .swiper-button-next:hover, .swiper-button-prev:hover {
-      background: rgba(0,0,0,0.6);
-    }
+    .comment {
+      background-color: #333;
+      padding: 8px;
+      border-radius: 8px;
+      font-size: 0.9em;
+      line-height: 1.3;
+    }
 
-    /* Paginación personalizada */
-    .swiper-pagination-bullet {
-      background: rgba(255,255,255,0.6);
-      opacity: 1;
-      transition: all 0.3s;
-    }
-
-    .swiper-pagination-bullet-active {
-      background: #ff9800;
-      transform: scale(1.2);
-    }
-  </style>
+    /* Swiper botones y paginación */
+    .swiper-pagination-bullet { background: #666; opacity: 0.8; }
+    .swiper-pagination-bullet-active { background: #fff; opacity: 1; }
+    .swiper-button-prev, .swiper-button-next {
+      color: #fff;
+      opacity: 0.7;
+      transition: opacity 0.3s;
+    }
+    .swiper-button-prev:hover, .swiper-button-next:hover {
+      opacity: 1;
+    }
+  </style>
 </head>
 <body>
-  <div class="swiper">
-    <div class="swiper-wrapper"></div>
-    <div class="swiper-pagination"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-button-next"></div>
-  </div>
-  
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwyY6m3H8WD494cnoQbNXwspsZtD1sGu97yio9mk9DTozGSuyo6gHXB1W6HArcpYfP2/exec"; 
+  <div class="swiper">
+    <div class="swiper-wrapper"></div>
+    <div class="swiper-pagination"></div>
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  </div>
 
-    async function cargarAnuncios() {
-      try {
-        const response = await fetch(`${SCRIPT_URL}?accion=listarAnuncios`);
-        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
-        
-        const data = await response.json();
-        const swiperWrapper = document.querySelector('.swiper-wrapper');
-        
-        data.anuncios.forEach((anuncio, index) => {
-          const swiperSlide = document.createElement('div');
-          swiperSlide.classList.add('swiper-slide');
-          
-          // Imagen
-          const img = document.createElement('img');
-          img.src = anuncio.url;
-          img.alt = anuncio.titulo || `Imagen ${index + 1}`;
-          swiperSlide.appendChild(img);
-          
-          // Contenedor de información
-          const infoContainer = document.createElement('div');
-          infoContainer.classList.add('info-container');
-          
-          // Título y descripción
-          const titulo = document.createElement('h2');
-          titulo.textContent = anuncio.titulo || '';
-          
-          const descripcion = document.createElement('p');
-          descripcion.classList.add('description');
-          descripcion.textContent = anuncio.descripcion || '';
-          
-          infoContainer.appendChild(titulo);
-          infoContainer.appendChild(descripcion);
-          
-          // Comentarios separados
-          if (anuncio.comentarios && anuncio.comentarios.trim() !== '') {
-            const commentsSection = document.createElement('div');
-            commentsSection.classList.add('comments-section');
-            
-            const comentariosArray = anuncio.comentarios.split('\n\n');
-            comentariosArray.forEach(comentario => {
-              if (comentario.trim() !== '') {
-                const p = document.createElement('p');
-                p.classList.add('comment');
-                p.textContent = comentario.trim();
-                commentsSection.appendChild(p);
-              }
-            });
-            infoContainer.appendChild(commentsSection);
-          }
-          
-          swiperSlide.appendChild(infoContainer);
-          swiperWrapper.appendChild(swiperSlide);
-        });
-        
-        new Swiper('.swiper', {
-          loop: true,
-          pagination: { el: '.swiper-pagination', clickable: true },
-          navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
-          slidesPerView: 1,
-          spaceBetween: 20,
-        });
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script>
+    const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwyY6m3H8WD494cnoQbNXwspsZtD1sGu97yio9mk9DTozGSuyo6gHXB1W6HArcpYfP2/exec"; 
 
-      } catch (error) {
-        console.error("Error al cargar las imágenes:", error);
-      }
-    }
+    async function cargarAnuncios() {
+      try {
+        const response = await fetch(`${SCRIPT_URL}?accion=listarAnuncios`);
+        if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+        const data = await response.json();
 
-    cargarAnuncios();
-  </script>
+        const swiperWrapper = document.querySelector('.swiper-wrapper');
+
+        data.anuncios.forEach((anuncio, index) => {
+          const swiperSlide = document.createElement('div');
+          swiperSlide.classList.add('swiper-slide');
+
+          // Imagen
+          const imageContainer = document.createElement('div');
+          imageContainer.classList.add('image-container');
+          const img = document.createElement('img');
+          img.src = anuncio.url;
+          img.alt = anuncio.titulo || `Imagen ${index + 1}`;
+          imageContainer.appendChild(img);
+
+          // Tarjeta de texto
+          const textCard = document.createElement('div');
+          textCard.classList.add('text-card');
+
+          const titulo = document.createElement('h2');
+          titulo.textContent = anuncio.titulo || '';
+
+          const descripcion = document.createElement('p');
+          descripcion.classList.add('description');
+          descripcion.textContent = anuncio.descripcion || '';
+
+          const commentsSection = document.createElement('div');
+          commentsSection.classList.add('comments-section');
+          if (anuncio.comentarios) {
+            const comentariosArray = anuncio.comentarios.split('\n\n');
+            comentariosArray.forEach(comentario => {
+              if (comentario.trim() !== '') {
+                const p = document.createElement('p');
+                p.classList.add('comment');
+                p.textContent = comentario;
+                commentsSection.appendChild(p);
+              }
+            });
+          }
+
+          textCard.appendChild(titulo);
+          textCard.appendChild(descripcion);
+          textCard.appendChild(commentsSection);
+
+          swiperSlide.appendChild(imageContainer);
+          swiperSlide.appendChild(textCard);
+          swiperWrapper.appendChild(swiperSlide);
+        });
+
+        new Swiper('.swiper', {
+          loop: true,
+          pagination: { el: '.swiper-pagination' },
+          navigation: { nextEl: '.swiper-button-next', prevEl: '.swiper-button-prev' },
+          slidesPerView: 1,
+          spaceBetween: 10,
+        });
+
+      } catch (error) {
+        console.error("Error al cargar los anuncios:", error);
+      }
+    }
+
+    cargarAnuncios();
+  </script>
 </body>
 </html>
